# pomo-dev

./: .gitignore  CLAUDE.md  LICENSE  README.md  cliff.toml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/pomodoro/: CLAUDE.md  INSTALL.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/pomodoro/scripts/: build-dmg.sh
apps/pomodoro/src/: App.vue  main.ts  router.ts
apps/pomodoro/src-tauri/: Cargo.toml  tauri.conf.json
apps/pomodoro/src-tauri/capabilities/: default.json
apps/pomodoro/src-tauri/icons/: icon.icns
apps/pomodoro/src-tauri/src/: ai.rs  audio.rs  commands.rs  db.rs  error.rs  main.rs  models.rs  ollama.rs  timer.rs
apps/pomodoro/src-tauri/src/integrations/: discord.rs  mod.rs  slack.rs  webhook.rs
apps/pomodoro/src/components/: CommandPalette.vue
apps/pomodoro/src/components/ai/: AiSettings.vue  DailyBriefing.vue  OllamaModels.vue  SessionDebrief.vue  WeeklyReport.vue
apps/pomodoro/src/components/integrations/: DiscordConfig.vue  EventLog.vue  IntegrationCard.vue  SlackConfig.vue  WebhookConfig.vue
apps/pomodoro/src/composables/: useCommandPalette.ts  useSettings.ts  useStats.ts  useTasks.ts  useToast.ts
apps/pomodoro/src/lib/: tauri.ts
apps/pomodoro/src/stores/: ai.ts  integrations.ts  ollama.ts  settings.ts  sound.ts  tasks.ts  theme.ts  timer.ts
apps/pomodoro/src/styles/: global.css  variables.css
apps/pomodoro/src/views/: AnalyticsView.vue  SettingsView.vue  StatsView.vue  TasksView.vue  TimerView.vue
docs/: pomodoro-macos-dmg.md
scripts/: bump-version.mjs
(+20 files in other folders)
